2012-03-30 Borut Razem <borut.razem AT gmail.com>

	* packages/build.mingw32/Makefile, packages/build.gcc/Makefile:
	  updated to gcc 4.7.0

2012-03-09 Borut Razem <borut.razem AT gmail.com>

	* packages/build.mingw32/Makefile:
	  reverted gcc to version 4.6.1 since sdcc compiled with
	  gcc 4.6.3 fails on regression tests;
	  corrected configure rule

2012-03-05 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gmp_mpfr/Makefile:
	  updated to gmp 5.0.4, mpfr 3.1.0
	* packages/build.mingw32/Makefile:
	  updated to binutils 2.22, mingwrt 3.30, gcc 4.6.3

2012-03-04 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile: properly quoted uname results

2012-02-26 Borut Razem <borut.razem AT gmail.com>

	* packages/build.flex/*, packages/build.m4/*: added

2012-02-16 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile:
	  added /opt/local/bin to path for Darwin i386

2012-01-08 Borut Razem <borut.razem AT gmail.com>

	* etc/dcf_list, crontab.txt:
	  added Mac OS X i386 on dhcp101 DFC build machine
	* packages/build.gputils/Makefile: upgraded to gputils-0.14.1

2012-01-06 Borut Razem <borut.razem AT gmail.com>

	* packages/build.bison, packages/build.bison/download,
	  packages/build.bison/Makefile: added
	* packages/build.automake/Makefile, packages/build.autoconf/Makefile:
          updated versions: automake-1.11.2, autoconf-2.68

2012-01-05 Borut Razem <borut.razem AT gmail.com>

	* packages/build.readline/Makefile, packages/build.ncurses/Makefile,
	  packages/packages.mk: introduced XCODE_ROOT

2011-10-29 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gputils/Makefile: upgraded to gputils-0.14.0
	* crontab.txt, packages/build.gettext/Makefile,
	  packages/build.mingw32/Makefile, packages/build.gcc/Makefile,
	  packages/build.wine/Makefile: changes

2011-08-27 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gmp_mpfr/Makefile: updated to mpfr 3.0.1, mpc 0.9
	* packages/build.gcc/Makefile: updated to gcc 4.6.1
